fixed box alignment

--- a/sass/pages/vpnDetails.scss
+++ b/sass/pages/vpnDetails.scss
@@ -1,10 +1,10 @@
 .detailMain{
-  padding-top: 4.5rem;
+  padding-top: 11rem;
   padding-bottom: 0;
 }
 .sectionVPNReview{
   color: black;
-  padding: 1rem 0 7rem;
+  padding: 0 0 7rem;
 
   .container{
     justify-content: center;
