--- a/sass/pages/vpnGuide.scss
+++ b/sass/pages/vpnGuide.scss
@@ -38,9 +38,25 @@
       border: 1px solid #dadada;
       margin-bottom: 30px;
       padding: 1.5rem 1rem;
+      height: 42rem;
+      display: flex;
+      flex-flow: column;
+      justify-content: space-between;
 
+      @media (max-width: 1000px) {
+        height: 41rem;
+      }
+
+
+      @media (max-width: 950px) {
+        height: 40rem;
+      }
+      @media (max-width: 900px) {
+        height: 39rem;
+      }
 
       @media (max-width: 700px) {
+        height: auto;
         width: 90%;
       }
 
